# GOLD_FNN_GARCH

./: README.md  examen_2_fnn_garch.html  examen_2_fnn_garch.ipynb  main.py  notebook.ipynb  preds_oro.xlsx  preds_oro_fnn.xlsx  preds_oro_garch.xlsx  pyproject.toml
